--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=IBM+Plex+Sans+KR&family=Jua&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="../css/a074.css">
+    <link rel= "stylesheet" href="./css/a074.css">
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
     <div id="home" class="con">
         <h1>Welcome to the</h1>
         <h3>Manchester City FC</h3>
-        <img src="../img/mancity/엠블럼.jpg">
+        <img src="./img/mancity/엠블럼.jpg">
     </div>
 
     <div id="intro" class="con">
@@ -56,18 +56,18 @@
 
     <div id="emblem" class="con">
         <h1>Emblem</h1>
-        <img src="../img/mancity/엠블럼.jpg">
+        <img src="./img/mancity/엠블럼.jpg">
     </div>
 
     <div id="coach" class="con">
         <h1>Coach</h1>
-        <img src="../img/mancity/과르디올라.jpg">
+        <img src="./img/mancity/과르디올라.jpg">
         <h3>펩 과르디올라</h3>
     </div>
 
     <div id="sta" class="con">
         <h1>Stadium</h1>
-        <img src="../img/mancity/스타디움.jpg">
+        <img src="./img/mancity/스타디움.jpg">
         <h3>에티하드 스타디움</h3>
     </div>
 
@@ -94,35 +94,35 @@
     <script>
         let players = {
             공격수: [
-                { name: "홀란드", img: "../img/mancity/홀란.jpg"},
-                { name: "포든", img: "../img/mancity/포든.jpg" },
-                { name: "도쿠", img: "../img/mancity/도쿠.jpg" },
-                { name: "그릴리시", img: "../img/mancity/그릴리시.jpg" },
+                { name: "홀란드", img: "./img/mancity/홀란.jpg"},
+                { name: "포든", img: "./img/mancity/포든.jpg" },
+                { name: "도쿠", img: "./img/mancity/도쿠.jpg" },
+                { name: "그릴리시", img: "./img/mancity/그릴리시.jpg" },
             ],
             미드필더: [
-                { name: "귄도안", img: "../img/mancity/귄도안.jpg" },
-                { name: "더브라위너", img: "../img/mancity/데브라이너.jpg" },
-                { name: "로드리", img: "../img/mancity/로드리.jpg" },
-                { name: "베르나르두 실바", img: "../img/mancity/실바.jpg" },
+                { name: "귄도안", img: "./img/mancity/귄도안.jpg" },
+                { name: "더브라위너", img: "./img/mancity/데브라이너.jpg" },
+                { name: "로드리", img: "./img/mancity/로드리.jpg" },
+                { name: "베르나르두 실바", img: "./img/mancity/실바.jpg" },
             ],
             수비수: [
-                { name: "아칸지", img: "../img/mancity/아칸지.jpg" },
-                { name: "디아스", img: "../img/mancity/디아스.jpg" },
-                { name: "아케", img: "../img/mancity/아케.jpg" },
-                { name: "워커", img: "../img/mancity/워커.jpg" },
-                { name: "그바르디올", img: "../img/mancity/그바르디올.jpg" },
-                { name: "루이스", img: "../img/mancity/루이스.jpg" },
+                { name: "아칸지", img: "./img/mancity/아칸지.jpg" },
+                { name: "디아스", img: "./img/mancity/디아스.jpg" },
+                { name: "아케", img: "./img/mancity/아케.jpg" },
+                { name: "워커", img: "./img/mancity/워커.jpg" },
+                { name: "그바르디올", img: "./img/mancity/그바르디올.jpg" },
+                { name: "루이스", img: "./img/mancity/루이스.jpg" },
             ],
             골키퍼: [
-                { name: "에데르송", img: "../img/mancity/에데르송.jpg" },
-                { name: "오르테가", img: "../img/mancity/오르테가.jpg" },
-                { name: "스콧 카슨", img: "../img/mancity/스콧카슨.jpg" },
+                { name: "에데르송", img: "./img/mancity/에데르송.jpg" },
+                { name: "오르테가", img: "./img/mancity/오르테가.jpg" },
+                { name: "스콧 카슨", img: "./img/mancity/스콧카슨.jpg" },
             ],
         };
 
         let uniforms = {
-            home : [{name : "홈 유니폼", img:"../img/mancity/홈.jpg"}],
-            away : [{name : "어웨이 유니폼", img:"../img/mancity/어웨이.jpg"}],
+            home : [{name : "홈 유니폼", img:"./img/mancity/홈.jpg"}],
+            away : [{name : "어웨이 유니폼", img:"./img/mancity/어웨이.jpg"}],
             third : [{name : "써드 유니폼", img:"../img/mancity/써드.jpg"}]
         }
 
