--- a/a047.html
+++ b/a047.html
@@ -123,7 +123,7 @@
         let uniforms = {
             home : [{name : "홈 유니폼", img:"./img/mancity/홈.jpg"}],
             away : [{name : "어웨이 유니폼", img:"./img/mancity/어웨이.jpg"}],
-            third : [{name : "써드 유니폼", img:"../img/mancity/써드.jpg"}]
+            third : [{name : "써드 유니폼", img:"./img/mancity/써드.jpg"}]
         }
 
         function show(id) {
